# r4c_navstack

./: .clang-format  .gitmodules  LICENSE  readme.md
src/eut_pcl_utils/: CMakeLists.txt  package.xml
src/eut_pcl_utils/launch/: cloud_assembler.launch.xml  livox_repub.launch.xml
src/eut_pcl_utils/src/: cloud_circular_assembler.cpp  cloud_circular_assembler.cpp.cpp  ground_detector.cpp  livox_repub.cpp  pcl_utils.cpp  registered_cloud_assembler.cpp  rshelios_converter.cpp  rslidar_horizontal_angle_range_filter.cpp
src/r4c_bringup/: CMakeLists.txt  package.xml
src/r4c_bringup/config/: ackermann_joint_states_to_twist.yaml  ackermann_twist_to_joint_states.yaml  carob_teleoperation.yaml  carob_twist_mux_topics_locks.yaml  carob_twist_odometry_no_slam.yaml  carob_twist_odometry_slam.yaml  crop_row_estimator_es.yaml  crop_row_estimator_gr_carob.yaml  livox_crop_row_estimator.yaml  livox_hallway_detector.yaml  livox_lidar_3GGDJ3A00100031_config.json  livox_lidar_3JEDK38001Q1631_config.json  livox_mid360_config.json  livox_trunk_detector.yaml  mid360_hallway_detector_es.yaml  odom_gnss_publisher.yaml  r4c_gnss_init_tractor.yaml  rs_hallway_detector_es.yaml  rs_hallway_detector_gr.yaml  tractor_nh_t4_110f_teleoperation.yaml  tractor_twist_mux_topics_locks_es.yaml  tractor_twist_mux_topics_locks_gr.yaml  yolo_crop_row_estimator.yaml  zed_mbase.yaml  zed_rover.yaml
src/r4c_bringup/launch/: differential_teleoperation.launch.xml  livox_lidar.launch.xml  livox_mid360.launch.py  r4c_carob_bringup.launch.xml  r4c_carob_bringup_gr.launch.xml  r4c_sensors.launch.xml  r4c_tractor_bringup.launch.xml  r4c_tractor_bringup_es.launch.xml  r4c_tractor_bringup_gr.launch.xml  r4c_web_server.launch.xml  rviz.launch.xml  twist_mux.launch.py  ublox.launch.xml
src/r4c_bringup/rviz/: r4c.rviz  rslidar_hallway_detector_crop_row_path_estimator.rviz
src/r4c_bringup/scripts/: compress_image.py  record_bagfile  set_config_file
src/r4c_bringup/src/: r4c_gnss_init_main.cpp
src/r4c_bringup/test/: hallway_detector_benchmark.launch.xml  r4c_create_map.launch.xml  rslidar_hallway_detector_crop_row_path_estimator.launch.xml  test_gnss_localization.launch.xml  test_livox_trunk_detector.launch.xml
src/r4c_can_adapter/: CMakeLists.txt  package.xml
src/r4c_can_adapter/config/: can_adapters_carob_gr.yaml  can_adapters_tractor_es.yaml  can_adapters_tractor_gr.yaml
src/r4c_can_adapter/dbc/: agc_eut_carob_20230608.dbc  agc_eut_tractor_20231130_v1.1.1_test.dbc  agc_mw.dbc  can_msg_def_old.txt
src/r4c_can_adapter/doc/: tractor_computed_linear_speed_vs_speedometer.txt
src/r4c_can_adapter/launch/: carob_can2ros_adapter.launch.xml  carob_ros2can_adapter.launch.xml  tractor_can2ros_adapter.launch.xml  tractor_ros2can_adapter.launch.xml
src/r4c_can_adapter/src/: agcbox_ens_emulator.cpp  agcbox_ens_emulator_main.cpp  can2ros_adapter.cpp  carob_can2ros_adapter.cpp  carob_can2ros_adapter_main.cpp  carob_ros2can_adapter.cpp  carob_ros2can_adapter_main.cpp  dbc_model_checker.cpp  ros2can_adapter.cpp  tractor_can2ros_adapter.cpp  tractor_can2ros_adapter_main.cpp  tractor_ros2can_adapter.cpp  tractor_ros2can_adapter_main.cpp
src/r4c_commander/: CMakeLists.txt  package.xml
src/r4c_commander/config/: r4c_commander_config_es.yaml  r4c_commander_config_gr.yaml  r4c_commander_config_gr_carob.yaml
src/r4c_commander/launch/: r4c_commander.launch.xml
src/r4c_commander/scripts/: fc_diagnostic_publisher.py  send_command.py
src/r4c_commander/src/: r4c_commander_node.cpp
src/r4c_description/: CMakeLists.txt  package.xml
src/r4c_description/config/: agcbox_lsp_es.yaml  agcbox_lsp_gr.yaml  carob.yaml  diff_drive_joint_states_to_twist.yaml  diff_drive_twist_to_joint_states.yaml  hokuyo_lidar_lsp_es.yaml  livox_avia_lidar_lsp_es.yaml  livox_avia_lidar_lsp_gr.yaml  livox_mid360_lidar_lsp_gr.yaml  livox_mid360_lidar_lsp_gr_carob.yaml  luxonis_oak_d_poe_camera_lsp_es.yaml  luxonis_oak_d_poe_camera_lsp_gr.yaml  rs_helios_lidar_lsp_es.yaml  rs_helios_lidar_lsp_gr.yaml  rs_helios_lidar_lsp_gr_tractor.yaml  sensors_platform_lsp_es.yaml  tractor_nh_t4_110f.yaml  ublox.yaml  um7.yaml
src/r4c_description/meshes/: agcbox.stl  agcbox_orig.stl  eut_carob_chassis.stl  eut_carob_full.stl  eut_carob_wheel.stl  front_wheel.stl  front_wheel_orig.stl  livox_avia_lidar.stl  livox_avia_lidar_orig.stl  livox_mid40_lidar.stl  livox_mid70_lidar.stl  r4c_avia_holder.stl  rear_wheel.stl  rear_wheel_rotated_properly.stl  rs_16_lidar.stl  rs_helios_lidar.stl  rs_helios_lidar_orig.stl  tractor_nh_t4_110f_chassis.stl  tractor_nh_t4_80f_chassis.stl
src/r4c_description/src/: diff_drive_joint_states_to_twist.cpp  diff_drive_joint_states_to_twist_main.cpp  diff_drive_twist_to_joint_states.cpp  diff_drive_twist_to_joint_states_main.cpp
src/r4c_description/urdf/: agcbox_macro.xacro  carob_macro.xacro  common_inertia_matrices.xacro  depthai_macro.xacro  imu_macro.xacro  lidar_2d_macro.xacro  lidar_3d_macro.xacro  r4c_carob.xacro  r4c_tractor.xacro  r4c_tractor_sensors_platform_macro.xacro  tractor_nh_macro.xacro  ublox_macro.xacro
src/r4c_localization/: CMakeLists.txt  package.xml
src/r4c_localization/config/: eut_fast_lio_avia_localization.yaml  eut_fast_lio_avia_mapping.yaml  eut_fast_lio_mid360_es.yaml  eut_fast_lio_mid360_gr_carob.yaml  eut_fast_lio_mid70_localization.yaml  eut_fast_lio_mid70_mapping.yaml  eut_fast_lio_rslidar_es.yaml  eut_fast_lio_rslidar_gr.yaml  eut_fast_lio_rslidar_gr_carob.yaml  navsat_transform_es.yaml  navsat_transform_gr.yaml  robot_localization_global_no_slam_es.yaml  robot_localization_global_no_slam_gr.yaml  robot_localization_global_slam_gr.yaml  robot_localization_local.yaml
src/r4c_localization/launch/: r4c_robot_localization.launch.xml
src/r4c_localization/maps/: 2023.06.22_09.04.19_Z.pcd  2023.08.14_serrater_parking_map.pcd
src/r4c_localization/rviz/: gnss_navigation.rviz
src/r4c_localization/src/: agcbox_imu_filter.cpp  enu_pos_to_navsatfix.cpp  pub_datum_fix.cpp
src/r4c_navigation_stack/r4c_navigation/: CMakeLists.txt  package.xml
src/r4c_reporter/: CMakeLists.txt  package.xml  test.py
(+274 files in other folders)
