<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r4c_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="juan.rascon@eurecat.org">juan.rascon</maintainer>
  <maintainer email="mateus.sanches@eurecat.org">mateus.sanches</maintainer>
  <maintainer email="pau.reverte@eurecat.org">pau.reverte</maintainer>
  <maintainer email="xavier.ruiz@eurecat.org">xavier.ruiz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <depend>rclcpp</depend>
  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>r4c_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" />
  </export>

</package>
