<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r4c_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xavi.ruiz@eurecat.org">eutrob</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rlcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msg</depend>
  <depend>eut_crop_row_estimator</depend>
  <depend>eut_maneuver_generation</depend>
  <depend>eut_fixed_gplanner</depend>
  <depend>eut_pure_pursuit</depend>
  <depend>rosidl_default_generators</depend>
  <depend>action_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav2_core</depend>
  <depend>eut_nav_utils</depend>
  <depend>vector_pursuit_controller</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>